# CaloriesBurnt

./: .gitignore  ARCHITECTURE.md  DEPLOYMENT.md  POLISH_COMPLETE.md  QUICK_START.md  README.md  UPDATED_DEPLOYMENT_GUIDE.md  USAGE.md  app.py  metriburn_app.py  pyproject.toml  requirements.txt  test_dependencies.py
.devcontainer/: devcontainer.json
.github/workflows/: ci-cd.yml
.streamlit/: config.toml
app/: alternative_header.py  encode_logo.py  encode_official_logo.py  encode_updated_logo.py  logo_base64.py
assets/: generate_logo.py  generate_new_logo.py
data/: engineered_exercise_dataset.csv  engineered_exercise_dataset_expanded.csv  exercise_dataset.csv
docs/: DATA.md  INTEGRATION.md
models/: calories_prediction_model.pkl
src/: metriburn_app.py
tests/: test_shared_utils.py
